<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/graphql_api">

    <activity
        android:id="@+id/main"
        android:name="com.example.myappjava.AmplifyActivity"
        android:label="activity_main"
        tools:layout="@layout/activity_amplify" />

    <fragment
        android:id="@+id/graphql_api"
        android:name="com.example.myappjava.api.graphql.GraphQLAPIFragment"
        android:label="@string/graphql_api"
        tools:layout="@layout/fragment_graphql_api" />

    <navigation
        android:id="@+id/auth_graph"
        app:startDestination="@id/auth">
        <fragment
            android:id="@+id/auth"
            android:name="com.example.myappjava.auth.AuthFragment"
            android:label="@string/authentication"
            tools:layout="@layout/fragment_auth" />
        <fragment
            android:id="@+id/sign_in"
            android:name="com.example.myappjava.auth.SignInFragment"
            android:label="@string/sign_in"
            tools:layout="@layout/fragment_sign_in">
            <action
                android:id="@+id/to_sign_up"
                app:destination="@id/sign_up" />
        </fragment>
        <fragment
            android:id="@+id/sign_up"
            android:name="com.example.myappjava.auth.SignUpFragment"
            android:label="@string/sign_up"
            tools:layout="@layout/fragment_sign_up">
            <action
                android:id="@+id/to_confirm_sign_up"
                app:destination="@id/confirm_sign_up" />
        </fragment>
        <fragment
            android:id="@+id/confirm_sign_up"
            android:name="com.example.myappjava.auth.ConfirmSignUpFragment"
            android:label="@string/confirm_sign_up"
            tools:layout="@layout/fragment_confirm_sign_up" />

        <action
            android:id="@+id/to_auth"
            app:destination="@id/auth"
            app:popUpTo="@id/auth" />

        <action
            android:id="@+id/to_sign_in"
            app:destination="@id/sign_in"
            app:popUpTo="@id/sign_in"
            app:popUpToInclusive="true" />
    </navigation>
</navigation>