<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/descriptionTIL"
        style="@style/AuthTextInputLayoutStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_12"
        android:layout_marginTop="@dimen/dp_24"
        android:layout_marginEnd="@dimen/dp_12"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/descriptionET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawablePadding="16dp"
            android:hint="@string/description"
            android:inputType="textShortMessage"
            android:lines="1"
            android:textColor="@color/grey_212121"
            android:textSize="@dimen/sp_16"
            tools:text="New task" />
    </com.google.android.material.textfield.TextInputLayout>

    <CheckBox
        android:id="@+id/completedCB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/dp_8"
        android:text="@string/completed"
        app:layout_constraintStart_toStartOf="@id/descriptionTIL"
        app:layout_constraintTop_toBottomOf="@id/descriptionTIL" />

    <TextView
        android:id="@+id/modifyBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_36"
        android:background="@android:color/transparent"
        android:contentDescription="@null"
        android:drawablePadding="@dimen/dp_8"
        android:padding="@dimen/dp_12"
        android:text="@string/add"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:drawableStartCompat="@drawable/ic_round_add_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/descriptionTIL" />

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/todoSRL"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/completedCB">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/todoRV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:itemCount="10"
            tools:listitem="@layout/item_todo" />
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

</androidx.constraintlayout.widget.ConstraintLayout>